# siskirem

./: .gitignore  LICENSE  README.md  SiskiRem.py  compile.sh  compileJava.sh  manifest.txt  siskirem.c  siskirem.java
C#/: Program.cs  SiskiRem.sln
Go/: SiskiRem.go
JS/: index.css  index.html  main.js
Lua/: siskirem.lua
Rust/: Cargo.toml
SiskiRemCharp/: Program.cs
gleam/: gleam.toml
gleam/src/: glem_siskirem.gleam  woman.gleam
src/: main.rs
